--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@emotion/styled": "^11.14.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "highlight.js": "^11.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-transition-group": "^4.4.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
